--- a/index.html
+++ b/index.html
@@ -107,13 +107,15 @@
           residuales.</p>
       </div>
       <div id="4" class="materials">
-        <h3>Maderas</h3>
+        <h3>Maderas (TOP-ROOF / SYSTEM)</h3>
         <div class="materials__img">
           <img src="images/materiales/Maderas/1.png" alt="">
           <img src="images/materiales/Maderas/2.png" alt="">
           <img src="images/materiales/Maderas/3.png" alt="">
         </div>
-        <p class="materials__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam cumque suscipit ipsam necessitatibus, fugiat exercitationem harum architecto, ad nobis officia tenetur pariatur dolorem veritatis consequuntur doloribus consectetur porro debitis repudiandae ab ducimus tempore velit quam quas. Expedita libero ipsum nobis esse voluptatum ipsam facere illum, magni nulla enim porro.</p>
+        <p class="materials__text">Sistema impregnador para protección de los de entarimados de maderas exteriores mejor conocidos como decks de madera, estos entarimados sufren alteraciones de su color y poros naturales, por el efecto combinado de la acción del sol (rayos UV), agentes atmosféricos, (la lluvia) y agentes contaminantes del ambiente (partículas de hidrocarburos suspendidas). El resultado es que en poco tiempo (meses), cualquier madera a la intemperie pierde su tono y natural
+          Las tarimas exteriores requieren un mantenimiento con resinas profesional formuladas con filtros solares., 
+          Los entarimados más habituales son: el Iroco, Ipe, Cumarú, Teka, Merbau etc.</p>
       </div>
       <div id="5" class="materials">
         <h3>Poliuretanos</h3>
@@ -145,45 +147,15 @@
 
 
   <div class="container-2">
-    <div class="content">
-      <img src="images/materiales/Acrilicos/1.jpg" alt="">
-      <div class="content__info">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Odio reiciendis expedita dolor, voluptatibus sed ut deleniti 
-          eum amet praesentium. Eum eos beatae asperiores vel molestias
-          in repudiandae sed accusantium ad amet sint eius, obcaecati 
-          necessitatibus sequi dicta aliquam! Voluptas optio ullam tempore 
-          asperiores qui a illo velit dicta cumque laboriosam dolor, 
-          voluptates aut consequatur aliquid itaque eum consectetur est 
-          neque dolores esse totam non voluptatibus. Reprehenderit dolores 
-          placeat asperiores eos optio porro quos aut minus numquam, 
-          adipisci nisi distinctio laboriosam autem praesentium amet 
-          recusandae officiis officia perspiciatis voluptatem animi 
-        </p>
-        <p>
-          debitis? Veritatis accusantium voluptates ab eius labore 
-          officia hic reprehenderit obcaecati incidunt iure, suscipit 
-          quia omnis, excepturi porro facilis! Totam perferendis asperiores 
-          possimus molestiae fugiat unde beatae amet omnis dolorem minima, 
-          cumque id. Eaque soluta assumenda odio, inventore provident sequi 
-          obcaecati iure corporis sapiente cum rem. Dolores ipsa delectus, 
-          eligendi quos dolor voluptas distinctio? Veritatis eum sint repellat 
-          repudiandae non necessitatibus odit alias ex aliquid sunt maxime, 
-          accusantium ipsa commodi aspernatur impedit ad? Enim quos nobis 
-          laboriosam accusamus quisquam quo quam delectus itaque cumque 
-          labore, obcaecati sit, harum eveniet non vero dolor minima voluptas 
-          nihil ipsam dicta animi eum! Error illo enim voluptatum, ipsam 
-          quisquam iusto maiores tempore. Et, vitae est nostrum eum quam 
-          tenetur possimus earum quae eos, laborum quaerat impedit corrupti 
-          velit quia blanditiis atque incidunt cum id cupiditate, nemo 
-          labore eligendi! Id fugit doloremque </p>
-      </div>
-    </div>
     <div class="content-2">
-      <h3 class="text-align">“OTORGAMOS, GARANTÍAS POR ESCRITO, EN TODOS NUESTROS SISTEMAS DE
+      <h3 class="text-aign">“OTORGAMOS, GARANTÍAS POR ESCRITO, EN TODOS NUESTROS SISTEMAS DE
         IMPERMEABILIZACIÓN.”</h3>
     </div>
   </div>
+
+
+
+  
   <footer class="footer-main">
     <a href="index.html"class="footer__logo">
       <h1 class="no-margin text-center logo__name">IMPERSISTEM</h1>
@@ -213,7 +185,6 @@
     </div>
     <nav class="footer__navigation">
       <a href="nosotros.html" class="navigation__link">Nosotros</a>
-      <a href="proyects.html"   class="navigation__link">Proyectos</a>
       <a href="contacto.html" class="navigation__link">Contacto</a>
     </nav>
 
