--- a/contacto.html
+++ b/contacto.html
@@ -89,8 +89,8 @@
             </a>
             
           </div>
-          <div class="contact__p__text">
-            <h2 class="">soluciones@imperesistem.mx</h2>
+          <div class="contact__p__text mail">
+            <h2>soluciones@imperesistem.mx</h2>
           </div>
         </div>
         <!--contact p2-->
