--- a/contacto.html
+++ b/contacto.html
@@ -20,18 +20,7 @@
           <div class="close-btn"></div>
           <li class="menu-item"><a href="index.html">Inicio</a></li>
           <li class="menu-item"><a href="nosotros.html">Nosotros</a></li>
-          <li class="menu-item">
-            <a class="sub-btn" href="index.html">Impermeabilizantes <i class="fas fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li class="sub-item"><a href="#1">Acrilicos</a></li>
-              <li class="sub-item"><a href="#2">Anti raiz</a></li>
-              <li class="sub-item"><a href="#3">Cementosos</a></li>
-              <li class="sub-item"><a href="#4">Maderas</a></li>
-              <li class="sub-item"><a href="#5">Poliuretanos</a></li>
-              <li class="sub-item"><a href="#6">Prefabricados</a></li>
-              <li class="sub-item"><a href="#inicio">Volver arriba</a></li>
-            </ul>
-          </li>
+          
         
           <li class="menu-item"><a href="contacto.html">Contacto</a></li>
           <li class="menu-item">
@@ -80,7 +69,7 @@
         <!--contact p1-->
         <div class="contact__p">
           <div class="contact__p__icons">
-            <a target="_blanck" href="https://api.whatsapp.com/send?phone=525517620407&text=Hola,%20necesito%20un%20asesor%20de%20servicios%20que%20me%20apoye%20%F0%9F%99%82">
+            <a target="_blanck" href="tel://+522461034307">
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#0a72b8" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <rect x="3" y="5" width="18" height="14" rx="2" />
