--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
   <div class="container-2">
     <div class="content-2">
-      <h3 class="text-aign">“OTORGAMOS, GARANTÍAS POR ESCRITO, EN TODOS NUESTROS SISTEMAS DE
-        IMPERMEABILIZACIÓN.”</h3>
+      <h3 class="text-align">OTORGAMOS, GARANTÍAS POR ESCRITO, EN TODOS NUESTROS SISTEMAS DE
+        IMPERMEABILIZACIÓN.</h3>
     </div>
   </div>
 
@@ -161,6 +161,7 @@
       <h1 class="no-margin text-center logo__name">IMPERSISTEM</h1>
     </a>
     <div class="footer__icons">
+
       <a target="_blanck" href="https://api.whatsapp.com/send?phone=525517620407&text=Hola,%20necesito%20un%20asesor%20de%20servicios%20que%20me%20apoye%20%F0%9F%99%82">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-whatsapp" width="40" height="40" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -182,6 +183,16 @@
           <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
         </svg>
       </a>
+      <a href="https://www.linkedin.com/company/impersistemmx">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <rect x="4" y="4" width="16" height="16" rx="2" />
+          <line x1="8" y1="11" x2="8" y2="16" />
+          <line x1="8" y1="8" x2="8" y2="8.01" />
+          <line x1="12" y1="16" x2="12" y2="11" />
+          <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+        </svg>
+      </a>
     </div>
     <nav class="footer__navigation">
       <a href="nosotros.html" class="navigation__link">Nosotros</a>
@@ -190,8 +201,7 @@
 
   </footer>
   
-  
-      <script src="script.js" charset="utf-8"></script>
+  <script src="script.js" charset="utf-8"></script>
 
   </body>
 </html>
