se agergaron cosas

--- a/contacto.html
+++ b/contacto.html
@@ -62,8 +62,8 @@
            
           </div>
           <div class="contact__p__text">
-            <h2>¿Necesitas asesoramiento?</h2>
-            <h2>Contacta a un asesor.</h2>
+            
+            <h2>¡Contacta a uno de nuestros asesores!</h2>
           </div>
         </div>
         <!--contact p1-->
@@ -81,7 +81,6 @@
           </div>
           <div class="contact__p__text mail">
             <h2>Llama ahora.</h2>
-            <h2>soluciones@imperesistem.mx</h2>
           </div>
         </div>
         <!--contact p2-->
