--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
             una serie de membranas de poliurea-bitumen anti-raíz y/o prefabricada anti-raíz y de geodrenes prefabricados que
             completan los sistemas híbridos de impermeabilización y drenado de azoteas, terrazas y balcones.</p>
           <ul>
-            <li><p>Membranas líquida de poliurea-bitumen anti-raíz de elasticidad ~1000% .</p></li>
-            <li><p>Membrana Impermeable prefabricada de asfalto modificado con aditivo anti‐raíz, diseñada especialmente para
+            <li class="materials__text__list"><p>Membranas líquida de poliurea-bitumen anti-raíz de elasticidad ~1000% .</p></li>
+            <li class="materials__text__list"><p>Membrana Impermeable prefabricada de asfalto modificado con aditivo anti‐raíz, diseñada especialmente para
               sistemas de techo verde (Green Roof).
               </p></li>
-            <li><p>Membrana prefabricada de polietileno de alta densidad con geotextil, para el drenado de terrazas, jardineras,
+            <li class="materials__text__list"><p>Membrana prefabricada de polietileno de alta densidad con geotextil, para el drenado de terrazas, jardineras,
               azoteas ajardinadas y cimentaciones, </p></li>
           </ul>
         </div>
@@ -199,13 +199,21 @@
         </svg>
       </a>
       <a href="https://www.linkedin.com/company/impersistemmx">
-        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="44" height="44" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="40" height="40" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
           <rect x="4" y="4" width="16" height="16" rx="2" />
           <line x1="8" y1="11" x2="8" y2="16" />
           <line x1="8" y1="8" x2="8" y2="8.01" />
           <line x1="12" y1="16" x2="12" y2="11" />
           <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+        </svg>
+      </a>
+      <a href="tel:5517620407">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone-outgoing" width="40" height="40" viewBox="0 0 24 24" stroke-width="1" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+          <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
+          <line x1="15" y1="9" x2="20" y2="4" />
+          <polyline points="16 4 20 4 20 8" />
         </svg>
       </a>
     </div>
