--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <li class="menu-item">
             <a class="sub-btn" href="#sistemas">Impermeabilizantes <i class="fas fa-angle-down"></i></a>
             <ul class="sub-menu">
-              <li class="sub-item"><a href="#1">Acrilicos</a></li>
-              <li class="sub-item"><a href="#2">Anti raiz</a></li>
+              <li class="sub-item"><a href="#1">Acílicos</a></li>
+              <li class="sub-item"><a href="#2">Anti raíz</a></li>
               <li class="sub-item"><a href="#3">Cementosos</a></li>
               <li class="sub-item"><a href="#4">Maderas</a></li>
               <li class="sub-item"><a href="#5">Poliuretanos</a></li>
