--- a/nosotros.html
+++ b/nosotros.html
@@ -24,13 +24,13 @@
           <li class="menu-item">
             <a class="sub-btn" href="#sistemas">Impermeabilizantes <i class="fas fa-angle-down"></i></a>
             <ul class="sub-menu">
-              <li class="sub-item"><a href="#1">Acrilicos</a></li>
-              <li class="sub-item"><a href="#2">Anti raiz</a></li>
-              <li class="sub-item"><a href="#3">Cementosos</a></li>
-              <li class="sub-item"><a href="#4">Maderas</a></li>
-              <li class="sub-item"><a href="#5">Poliuretanos</a></li>
-              <li class="sub-item"><a href="#6">Prefabricados</a></li>
-              <li class="sub-item"><a href="#inicio">Volver arriba</a></li>
+              <li class="sub-item"><a href="index.html#1">Acrilicos</a></li>
+              <li class="sub-item"><a href="index.html#2">Anti raiz</a></li>
+              <li class="sub-item"><a href="index.html#3">Cementosos</a></li>
+              <li class="sub-item"><a href="index.html#4">Maderas</a></li>
+              <li class="sub-item"><a href="index.html#5">Poliuretanos</a></li>
+              <li class="sub-item"><a href="index.html#6">Prefabricados</a></li>
+              <li class="sub-item"><a href="index.html#inicio">Volver arriba</a></li>
             </ul>
           </li>
         
